--- a/layout.html
+++ b/layout.html
@@ -41,6 +41,7 @@
 			</div>
 
 			<div id="navegacao">
+				
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Sobre</a></li>
@@ -50,9 +51,12 @@
 					<li><a href="#">Area do Cliente</a></li>
 					<li><a href="#">Contato</a></li>
 				</ul>
+				
 			</div>
 
-			<div id="rodape">Rodapé</div>
+			<div id="rodape">
+				Rodapé
+			</div>
 
 		</div>
 
